objects/Enrollment_Recycle__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <label>Contracts</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Number</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_Indicator__c</fullName>
        <label>New Business Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Enrollment Recycles</relationshipLabel>
        <relationshipName>Enrollment_Recycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processed Type</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_State__c</fullName>
        <label>Rating State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rpt_dt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rpt dt</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Dt__c</fullName>
        <description>Date that the import file was created</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Run Dt</label>
        <length>23</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC Product</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <description>Used to store/trap the enrollment records that did not get updated due to predefined errors</description>
    <label>Enrollment Recycle</label>
    <nameField>
        <displayFormat>ER-{00000}</displayFormat>
        <label>Error Recycle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Recycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Error_Message__c</columns>
        <columns>System__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Contracts__c</columns>
        <columns>Processed_Type__c</columns>
        <columns>Risk__c</columns>
        <columns>Rpt_dt__c</columns>
        <columns>Error_Number__c</columns>
        <columns>NAME</columns>
        <columns>Run_Dt__c</columns>
        <columns>Opportunity_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Ancillary_Recycles</fullName>
        <columns>Account_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Error_Message__c</columns>
        <columns>System__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Contracts__c</columns>
        <columns>Processed_Type__c</columns>
        <columns>Risk__c</columns>
        <columns>Rpt_dt__c</columns>
        <columns>Error_Number__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Run_Dt__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed_Type__c</field>
            <operation>notEqual</operation>
            <value>M</value>
        </filters>
        <label>Ancillary Recycles</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
</CustomObject>